--- a/project/cloud/deployment2.yaml
+++ b/project/cloud/deployment2.yaml
@@ -7,6 +7,19 @@ metadata:
   labels:
     name: bookstorens
 ---
+########################### creating secrets  ################################
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: bookstoresecrets
+  namespace : bookstorens
+type: Opaque
+data:
+   jasypt.encryptor.algorithm : UEJFV2l0aE1ENUFuZERFUw==
+   jasypt.encryptor.password : c2VjcmV0a2V5
+
+---
 ########################### database-service  ################################
 ---
 apiVersion: apps/v1
@@ -79,9 +92,8 @@ data:
    hibernate.hbm2ddl.auto : validate
    hibernate.dialect : org.hibernate.dialect.H2Dialect
    show_sql : "true"
-   
-   jasypt.encryptor.algorithm : PBEWithMD5AndDES
-   jasypt.encryptor.password : secretkey
+   #jasypt.encryptor.algorithm : PBEWithMD5AndDES
+   #jasypt.encryptor.password : secretkey
    server.port : "8088"
    books.per.page : "10"
 ---
@@ -103,8 +115,19 @@ spec:
       containers:
       - name: admin-app-container
         image: partha011/microservicenew/admin-application:1.0
-        command: ["java","-jar","admin-application-1.0.jar"]
+        command: ["java","-jar","-Xms500M","-Xmx700M","-Xdebug","-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005","-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-Dcom.sun.management.jmxremote.port=7796","-Dcom.sun.management.jmxremote.rmi.port=7796","-Djava.rmi.server.hostname=127.0.0.1","admin-application-1.0.jar"]
         args: []
+        env:
+            - name: jasypt.encryptor.algorithm
+              valueFrom:
+                secretKeyRef:
+                  name: bookstoresecrets
+                  key: jasypt.encryptor.algorithm
+            - name: jasypt.encryptor.password
+              valueFrom:
+                secretKeyRef:
+                  name: bookstoresecrets
+                  key: jasypt.encryptor.password
         envFrom:
             - configMapRef:
                 name: adminservice
@@ -179,7 +202,7 @@ spec:
       containers:
       - name: gateway-service-container
         image: partha011/microservicenew/gateway-service:1.0
-        command: ["java","-jar","gateway-service-1.0.jar"]
+        command: ["java","-jar","-Xms500M","-Xmx700M","-Xdebug","-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005","-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-Dcom.sun.management.jmxremote.port=7796","-Dcom.sun.management.jmxremote.rmi.port=7796","-Djava.rmi.server.hostname=127.0.0.1","gateway-service-1.0.jar"]
         args: []
         envFrom:
           - configMapRef:
@@ -228,8 +251,8 @@ data:
     hibernate.hbm2ddl.auto : validate
     hibernate.dialect : org.hibernate.dialect.H2Dialect
     show_sql : "true"
-    jasypt.encryptor.algorithm : PBEWithMD5AndDES
-    jasypt.encryptor.password : secretkey
+    #jasypt.encryptor.algorithm : PBEWithMD5AndDES
+    #jasypt.encryptor.password : secretkey
     key1 : value11
 ---
 apiVersion: apps/v1
@@ -250,8 +273,19 @@ spec:
       containers:
       - name: user-service-container
         image: partha011/microservicenew/user-service:1.0
-        command: ["java","-jar","user-service-1.0.jar"]
+        command: ["java","-jar","-Xms500M","-Xmx700M","-Xdebug","-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005","-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-Dcom.sun.management.jmxremote.port=7796","-Dcom.sun.management.jmxremote.rmi.port=7796","-Djava.rmi.server.hostname=127.0.0.1","user-service-1.0.jar"]
         args: ["--logging.file=user-service.log"]
+        env:
+            - name: jasypt.encryptor.algorithm
+              valueFrom:
+                secretKeyRef:
+                  name: bookstoresecrets
+                  key: jasypt.encryptor.algorithm
+            - name: jasypt.encryptor.password
+              valueFrom:
+                secretKeyRef:
+                  name: bookstoresecrets
+                  key: jasypt.encryptor.password
         envFrom:
           - configMapRef:
               name: userservice
@@ -299,8 +333,8 @@ data:
     hibernate.hbm2ddl.auto : validate
     hibernate.dialect : org.hibernate.dialect.H2Dialect
     show_sql : "true"
-    jasypt.encryptor.algorithm : PBEWithMD5AndDES
-    jasypt.encryptor.password : secretkey
+    #jasypt.encryptor.algorithm : PBEWithMD5AndDES
+    #jasypt.encryptor.password : secretkey
     test.key1 : value1
     test.key2 : value2
     key1 : value103
@@ -323,8 +357,19 @@ spec:
       containers:
       - name: product-service-container
         image: partha011/microservicenew/product-service:1.0
-        command: ["java","-jar","product-service-1.0.jar"]
+        command: ["java","-jar","-Xms500M","-Xmx700M","-Xdebug","-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005","-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-Dcom.sun.management.jmxremote.port=7796","-Dcom.sun.management.jmxremote.rmi.port=7796","-Djava.rmi.server.hostname=127.0.0.1","product-service-1.0.jar"]
         args: ["--logging.file=product-service.log"]
+        env:
+            - name: jasypt.encryptor.algorithm
+              valueFrom:
+                secretKeyRef:
+                  name: bookstoresecrets
+                  key: jasypt.encryptor.algorithm
+            - name: jasypt.encryptor.password
+              valueFrom:
+                secretKeyRef:
+                  name: bookstoresecrets
+                  key: jasypt.encryptor.password
         envFrom:
           - configMapRef:
               name: productservice
