--- a/admin-application/pom.xml
+++ b/admin-application/pom.xml
@@ -154,8 +154,19 @@
 			<version>2.2.2</version>
 		</dependency>
 
-
-
+		<!-- reporting related -->
+		<dependency>
+			<groupId>jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.13</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>jfreechart</groupId>
+			<artifactId>jcommon</artifactId>
+			<version>0.9.20</version>
+		</dependency> -->
+		
+			
 		<!-- logger -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -169,6 +180,12 @@
 			<artifactId>sonar-maven-plugin</artifactId>
 			<version>3.4.0.905</version>
 			<type>pom</type>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.8</version>
 		</dependency>
 		
 		
