--- a/project/cloud/deployment2.yaml
+++ b/project/cloud/deployment2.yaml
@@ -115,7 +115,15 @@ spec:
       containers:
       - name: admin-app-container
         image: partha011/microservicenew/admin-application:1.0
-        command: ["java","-jar","-Xms500M","-Xmx700M","-Xdebug","-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005","-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-Dcom.sun.management.jmxremote.port=7796","-Dcom.sun.management.jmxremote.rmi.port=7796","-Djava.rmi.server.hostname=127.0.0.1","admin-application-1.0.jar"]
+        command: ["java",
+                  "-jar",
+                  #memory arguments
+                  "-Xms500M","-Xmx700M",
+                  #remote debug
+                  "-Xdebug","-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005",
+                  #performance
+                  "-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-Dcom.sun.management.jmxremote.port=7796","-Dcom.sun.management.jmxremote.rmi.port=7796","-Djava.rmi.server.hostname=127.0.0.1",
+                  "admin-application-1.0.jar"]
         args: []
         env:
             - name: jasypt.encryptor.algorithm
